--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>🧠 MindoraGPT </span>
+            <span>🧠 MindoraGPT | Chatbot</span>
           </div>
           <div class="project-card-description">
             Your friendly mental wellness chatbot offering supportive conversations, affirmations, and
@@ -620,7 +620,7 @@
             <img src="assets/img/portfolio/dna.png" alt="Project 3" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>BioPulse – DNA to Music</span>
+            <span>BioPulse | DNA to Music</span>
           </div>
           <div class="project-card-description">
             BioPulse transforms DNA sequences into musical compositions in real time, blending science with sound.
@@ -638,20 +638,19 @@
         <!-- Project 4 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/mobile.png" alt="Project 4" class="project-card-image">
+            <img src="assets/img/portfolio/projectC.webp" alt="Project 4" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>Ecommerce - Aurora Mobile Hub</span>
+            <span>VerinoxGPT | Chatbot</span>
           </div>
           <div class="project-card-description">
-            Discover and shop the latest smartphones with ease. Aurora Mobile Hub features a sleek, responsive interface
-            with advanced filters, detailed specs, secure auth, and smooth cart & wishlist — built with React, Vite, and
-            Firebase.
+            This project is Verinox GPT, a professional, ChatGPT-like web application built with React and TypeScript
+            that functions as an elite AI assistant powered by OpenAI's GPT-4. 
           </div>
-          <a href="https://auroramobilehub.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://verinox-gpt.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/ecommerce" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/chatbot" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
