update project section

--- a/index.html
+++ b/index.html
@@ -645,12 +645,30 @@
           </div>
           <div class="project-card-description">
             This project is Verinox GPT, a professional, ChatGPT-like web application built with React and TypeScript
-            that functions as an elite AI assistant powered by OpenAI's GPT-4. 
+            that functions as an elite AI assistant powered by OpenAI's GPT-4.
           </div>
           <a href="https://verinox-gpt.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
           <a class="github-button" href="https://github.com/Jayanth0124/chatbot" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+        </div>
+        <!-- Project 9 -->
+        <div class="project-card">
+          <div class="project-card-image-container">
+            <img src="assets/img/portfolio/finger.png" alt="Project 9" class="project-card-image">
+          </div>
+          <div class="project-card-title">
+            <span>Finger Tracking Gesture Control</span>
+          </div>
+          <div class="project-card-description">
+            Fingr Lab is an interactive WebGL demo that allows you to control and manipulate 3D objects in real-time
+            using your hand gestures. Powered by MediaPipe and Three.js
+          </div>
+          <a href="https://fingrlab.netlify.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
+          </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/3D-gesture-control" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
@@ -695,19 +713,19 @@
         <!-- Project 7 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p7.png" alt="Project 7" class="project-card-image">
+            <img src="assets/img/portfolio/IG.png" alt="Project 7" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>Advanced Object Analyzer</span>
+            <span>AI Powered Image Generator</span>
           </div>
           <div class="project-card-description">
-            Built with Python and hosted on Streamlit, this system uses YOLOv8 for object detection, MediaPipe Pose
-            Estimation, and Wikipedia integration for real-time descriptions, featuring a Neumorphic dark mode UI.
+            Dream Render is a feature-rich application designed to provide a seamless and inspiring creative experience.
+            An elegant and powerful AI Image Generator built with React, Vite, and Tailwind CSS.
           </div>
-          <a href="https://object-analyzer.streamlit.app/" class="project-card-button" target="_blank">
+          <a href="https://dreamrender.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/object-detection" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/image-generator" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
@@ -732,25 +750,7 @@
 
         </div>
 
-        <!-- Project 9 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p9.png" alt="Project 9" class="project-card-image">
-          </div>
-          <div class="project-card-title">
-            <span>Personal Fitness Tracker 🏋️</span>
-          </div>
-          <div class="project-card-description">
-            A modern, premium-designed fitness tracker built with Python and Streamlit. It allows manual workout
-            tracking, interactive progress charts with Plotly, and user-controlled data saving—no auto-save! Free & Open
-            Source. 🚀
-          </div>
-          <a href="https://trackmygains.streamlit.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/fitness-tracker" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
+
 
         <!-- Project 10 -->
         <div class="project-card">
