--- a/awards/index.html
+++ b/awards/index.html
@@ -94,6 +94,8 @@
 </head>
 
 <body>
+  <div class="cursor"></div>
+  <div class="cursor-follower"></div>
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -133,6 +135,8 @@
       </nav><!-- .nav-menu -->
     </div>
   </header><!-- End Header -->
+
+
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
@@ -339,7 +343,7 @@
               <div class="cube-face">JavaScript</div>
               <div class="cube-face">Python</div>
               <div class="cube-face">Figma</div>
-              <div class="cube-face">Java</div>
+              <div class="cube-face">Node.Js</div>
             </div>
           </div>
         </div>
@@ -371,6 +375,14 @@
                 </div>
               </div>
             </div>
+
+            <div class="progress">
+              <span class="skill"><i class="fas fa-database"></i> SQL <i class="val">20%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -391,7 +403,17 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-java"></i> Java <i class="val">20%</i></span>
+              <span class="skill"><i class="fab fa-git-alt"></i> Git <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="progress">
+              <span class="skill"><i class="fab fa-node-js"></i> Node.Js <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -578,7 +600,7 @@
             <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>🧠 MindoraGPT </span>
+            <span>🧠 MindoraGPT | Chatbot</span>
           </div>
           <div class="project-card-description">
             Your friendly mental wellness chatbot offering supportive conversations, affirmations, and
@@ -598,7 +620,7 @@
             <img src="assets/img/portfolio/dna.png" alt="Project 3" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>BioPulse – DNA to Music</span>
+            <span>BioPulse | DNA to Music</span>
           </div>
           <div class="project-card-description">
             BioPulse transforms DNA sequences into musical compositions in real time, blending science with sound.
@@ -616,20 +638,37 @@
         <!-- Project 4 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/mobile.png" alt="Project 4" class="project-card-image">
+            <img src="assets/img/portfolio/projectC.webp" alt="Project 4" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>Ecommerce - Aurora Mobile Hub</span>
+            <span>VerinoxGPT | Chatbot</span>
           </div>
           <div class="project-card-description">
-            Discover and shop the latest smartphones with ease. Aurora Mobile Hub features a sleek, responsive interface
-            with advanced filters, detailed specs, secure auth, and smooth cart & wishlist — built with React, Vite, and
-            Firebase.
+            This project is Verinox GPT, a professional, ChatGPT-like web application built with React and TypeScript
+            that functions as an elite AI assistant powered by OpenAI's GPT-4.
           </div>
-          <a href="https://auroramobilehub.netlify.app/" class="project-card-button" target="_blank">
+          <a href="https://verinox-gpt.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/ecommerce" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/chatbot" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+        </div>
+        <!-- Project 9 -->
+        <div class="project-card">
+          <div class="project-card-image-container">
+            <img src="assets/img/portfolio/finger.png" alt="Project 9" class="project-card-image">
+          </div>
+          <div class="project-card-title">
+            <span>Finger Tracking Gesture Control</span>
+          </div>
+          <div class="project-card-description">
+            Fingr Lab is an interactive WebGL demo that allows you to control and manipulate 3D objects in real-time
+            using your hand gestures. Powered by MediaPipe and Three.js
+          </div>
+          <a href="https://fingrlab.netlify.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
+          </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/3D-gesture-control" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
@@ -674,19 +713,19 @@
         <!-- Project 7 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p7.png" alt="Project 7" class="project-card-image">
+            <img src="assets/img/portfolio/IG.png" alt="Project 7" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>Advanced Object Analyzer</span>
+            <span>AI Powered Image Generator</span>
           </div>
           <div class="project-card-description">
-            Built with Python and hosted on Streamlit, this system uses YOLOv8 for object detection, MediaPipe Pose
-            Estimation, and Wikipedia integration for real-time descriptions, featuring a Neumorphic dark mode UI.
+            Dream Render is a feature-rich application designed to provide a seamless and inspiring creative experience.
+            An elegant and powerful AI Image Generator built with React, Vite, and Tailwind CSS.
           </div>
-          <a href="https://object-analyzer.streamlit.app/" class="project-card-button" target="_blank">
+          <a href="https://dreamrender.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
           </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/object-detection" data-icon="octicon-star"
+          <a class="github-button" href="https://github.com/Jayanth0124/image-generator" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
@@ -711,25 +750,7 @@
 
         </div>
 
-        <!-- Project 9 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/p9.png" alt="Project 9" class="project-card-image">
-          </div>
-          <div class="project-card-title">
-            <span>Personal Fitness Tracker 🏋️</span>
-          </div>
-          <div class="project-card-description">
-            A modern, premium-designed fitness tracker built with Python and Streamlit. It allows manual workout
-            tracking, interactive progress charts with Plotly, and user-controlled data saving—no auto-save! Free & Open
-            Source. 🚀
-          </div>
-          <a href="https://trackmygains.streamlit.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/fitness-tracker" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
+
 
         <!-- Project 10 -->
         <div class="project-card">
@@ -1244,102 +1265,108 @@
     </section><!-- End Awards Section -->
 
     <!-- Photo Cover Section -->
-<section id="photos" style="padding: 60px 0; background: #f8f9fa;">
-  <div class="container">
-    <div class="section-title left-title">
-      <h2>Photos</h2>
-      <p>Explore my photo collection</p>
-    </div>
-    <div class="image-card">
-      <div class="parallax-container">
-        <img src="assets/img/portfolio/my2.jpg" alt="Cover Photo" class="image parallax-image" />
-        <a href="photo.html" class="btn overlay-btn">Hit Me Hard</a>
+    <section id="photos" style="padding: 60px 0; background: #f8f9fa;">
+      <div class="container">
+        <div class="section-title left-title">
+          <h2>Photos</h2>
+          <p>Explore my photo collection</p>
+        </div>
+        <div class="image-card">
+          <div class="parallax-container">
+            <img src="assets/img/portfolio/my2.jpg" alt="Cover Photo" class="image parallax-image" />
+            <a href="photo.html" class="btn overlay-btn">Hit Me Hard</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<!-- Styles -->
-<style>
-  #photos .container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  /* Section title aligned left */
-  #photos .left-title {
-    text-align: left;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto 30px auto;
-    padding: 0 15px;
-  }
-  #photos .left-title h2 {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
-  }
-  #photos .left-title p {
-    color: #555;
-    margin: 0;
-  }
+    <!-- Styles -->
+    <style>
+      #photos .container {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
-  /* Image Card */
-  #photos .image-card {
-    max-width: 500px;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-  }
-  #photos .parallax-container {
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    width: 100%;
-  }
-  #photos .parallax-image {
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: transform 0.1s ease-out;
-    will-change: transform;
-  }
+      /* Section title aligned left */
+      #photos .left-title {
+        text-align: left;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto 30px auto;
+        padding: 0 15px;
+      }
 
-  /* Button over image */
-  #photos .overlay-btn {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 12px 24px;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 4px;
-    text-decoration: none;
-    font-weight: 600;
-    transition: all 0.3s ease;
-  }
-  /* Hover animation */
-  #photos .overlay-btn:hover {
-    background-color: #0056b3;
-    transform: translateX(-50%) scale(1.05);
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-  }
-</style>
+      #photos .left-title h2 {
+        font-size: 2rem;
+        margin-bottom: 0.5rem;
+      }
 
-<!-- Script -->
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const parallaxImage = document.querySelector(".parallax-image");
+      #photos .left-title p {
+        color: #555;
+        margin: 0;
+      }
 
-    window.addEventListener("scroll", function() {
-      const rect = parallaxImage.getBoundingClientRect();
-      const windowHeight = window.innerHeight;
-      const offset = rect.top - windowHeight / 2;
-      parallaxImage.style.transform = `translateY(${offset * 0.1}px)`;
-    });
-  });
-</script>
+      /* Image Card */
+      #photos .image-card {
+        max-width: 500px;
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+      }
+
+      #photos .parallax-container {
+        position: relative;
+        overflow: hidden;
+        border-radius: 10px;
+        width: 100%;
+      }
+
+      #photos .parallax-image {
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: transform 0.1s ease-out;
+        will-change: transform;
+      }
+
+      /* Button over image */
+      #photos .overlay-btn {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 12px 24px;
+        background-color: #007bff;
+        color: #fff;
+        border-radius: 4px;
+        text-decoration: none;
+        font-weight: 600;
+        transition: all 0.3s ease;
+      }
+
+      /* Hover animation */
+      #photos .overlay-btn:hover {
+        background-color: #0056b3;
+        transform: translateX(-50%) scale(1.05);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      }
+    </style>
+
+    <!-- Script -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const parallaxImage = document.querySelector(".parallax-image");
+
+        window.addEventListener("scroll", function () {
+          const rect = parallaxImage.getBoundingClientRect();
+          const windowHeight = window.innerHeight;
+          const offset = rect.top - windowHeight / 2;
+          parallaxImage.style.transform = `translateY(${offset * 0.1}px)`;
+        });
+      });
+    </script>
 
 
 
@@ -1897,6 +1924,16 @@
 
   </main><!-- End #main -->
 
+  <!-- Popup Modal -->
+  <div id="popup-modal" class="popup-modal">
+    <div class="popup-content">
+      <span id="popup-close" class="popup-close">&times;</span>
+      <h2>Your visit = little joy moment</h2>
+      <p>Follow me on Github Or I’ll cry, dramatically… with love</p>
+      <a href="https://github.com/Jayanth0124" target="_blank" class="popup-button">Follow Me</a>
+      <p class="popup-timer">Closing in <span id="popup-timer-count">10</span>s</p>
+    </div>
+  </div>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -1928,4 +1965,5 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 </body>
+
 </html>
