--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
-              <div class="icon"><i class="bi bi-shield-check"></i></div>
+              <div class="icon"><i class="bi bi-fingerprint"></i></div>
               <h4 class="title"><a href="#">Ethical Hacking</a></h4>
               <p class="description">Learn about ethical hacking, cybersecurity, and penetration testing to protect
                 digital assets and enhance security measures. Explore tools, techniques, and methodologies for
