--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@
                 the intricacies of coding languages and frameworks to bring ideas to life on the web.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mb-4">
+          <!-- <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-pencil"></i></div>
               <h4 class="title"><a href="#">Graphic Design</a></h4>
@@ -1400,7 +1400,7 @@
                 strategic thinking. I love exploring the interplay of colors, typography, and imagery to communicate
                 messages effectively and leave a lasting impression.</p>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-camera"></i></div>
