update meta tags

--- a/awards/index.html
+++ b/awards/index.html
@@ -9,7 +9,7 @@
     name="keywords">
   <meta content="Donavalli Jayanth" name="description">
 
-  <meta name="google-site-verification" content="RgDlIEHIkNAYH_iKQo5yOkA6BhKnkq2cjNAYhV8s9y0" />
+  <meta name="google-site-verification" content="RgDlIEHIkNAYH_iKQo5yOkA6BhKnkq2cjNAYhV8s9y0">
 
   <!-- Primary SEO Meta Tags -->
   <title>Jayanth Portfolio | Creative Developer & Designer</title>
@@ -31,7 +31,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.jayanth.site/">
+  <meta name="twitter:url" content="https://jayanth.site/">
   <meta name="twitter:title" content="Jayanth Portfolio |  Web Developer, Photographer, Editor">
   <meta name="twitter:description" content="Explore the cutting-edge projects and designs of Donavalli Jayanth.">
   <meta name="twitter:image" content="https://jayanth.site/assets/img/bg1.jpg">
@@ -46,7 +46,7 @@
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Jayanth Portfolio Preview">
 
-  <link rel="canonical" href="https://www.jayanth.site/" />
+  <link rel="canonical" href="https://jayanth.site/" />
 
 
 
@@ -1392,7 +1392,7 @@
                 the intricacies of coding languages and frameworks to bring ideas to life on the web.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mb-4">
+          <!-- <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-pencil"></i></div>
               <h4 class="title"><a href="#">Graphic Design</a></h4>
@@ -1400,7 +1400,7 @@
                 strategic thinking. I love exploring the interplay of colors, typography, and imagery to communicate
                 messages effectively and leave a lasting impression.</p>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-camera"></i></div>
@@ -1439,7 +1439,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
-              <div class="icon"><i class="bi bi-shield-check"></i></div>
+              <div class="icon"><i class="bi bi-fingerprint"></i></div>
               <h4 class="title"><a href="#">Ethical Hacking</a></h4>
               <p class="description">Learn about ethical hacking, cybersecurity, and penetration testing to protect
                 digital assets and enhance security measures. Explore tools, techniques, and methodologies for
