--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.jayanth.site/">
+  <meta name="twitter:url" content="https://jayanth.site/">
   <meta name="twitter:title" content="Jayanth Portfolio |  Web Developer, Photographer, Editor">
   <meta name="twitter:description" content="Explore the cutting-edge projects and designs of Donavalli Jayanth.">
   <meta name="twitter:image" content="https://jayanth.site/assets/img/bg1.jpg">
@@ -46,7 +46,7 @@
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Jayanth Portfolio Preview">
 
-  <link rel="canonical" href="https://www.jayanth.site/" />
+  <link rel="canonical" href="https://jayanth.site/" />
 
 
 
