--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 
 
         <!-- Project 10 -->
-        <!-- <div class="project-card">
+        <div class="project-card">
           <div class="project-card-image-container">
             <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image">
           </div>
@@ -770,7 +770,7 @@
           <a class="github-button" href="https://github.com/Jayanth0124/dictionary" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
           <script async defer src="https://buttons.github.io/buttons.js"></script>
-        </div> -->
+        </div>
 
 
 
