--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         </div>
 
         <!-- Project 8 -->
-        <!-- <div class="project-card">
+        <div class="project-card">
           <div class="project-card-image-container">
             <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image">
           </div>
@@ -748,7 +748,7 @@
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
           <script async defer src="https://buttons.github.io/buttons.js"></script>
 
-        </div> -->
+        </div>
 
 
 
