--- a/awards/simplilearn.html
+++ b/awards/simplilearn.html
@@ -179,19 +179,19 @@
 
             <nav id="navbar" class="nav-menu navbar">
                 <ul>
-                    <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i>
+                    <li><a href="../index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i>
                             <span>Home</span></a></li>
-                    <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i>
+                    <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i>
                             <span>About</span></a></li>
-                    <li><a href="index.html#projects" class="nav-link scrollto"><i class="bx bx-task"></i>
+                    <li><a href="../index.html#projects" class="nav-link scrollto"><i class="bx bx-task"></i>
                             <span>Projects</span></a></li>
-                    <li><a href="index.html#education" class="nav-link scrollto"><i class="bx bx-book"></i>
+                    <li><a href="../index.html#education" class="nav-link scrollto"><i class="bx bx-book"></i>
                             <span>Education</span></a></li>
-                    <li><a href="index.html#awards" class="nav-link scrollto"><i class="bx bx-award"></i>
+                    <li><a href="../index.html#awards" class="nav-link scrollto"><i class="bx bx-award"></i>
                             <span>Awards</span></a></li>
-                    <li><a href="index.html#interests" class="nav-link scrollto"><i class="bx bx-heart"></i>
+                    <li><a href="../index.html#interests" class="nav-link scrollto"><i class="bx bx-heart"></i>
                             <span>Interests</span></a></li>
-                    <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
+                    <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
                             <span>Contact</span></a></li>
                 </ul>
 
