--- a/awards/simplilearn.html
+++ b/awards/simplilearn.html
@@ -189,6 +189,9 @@
                             <span>Education</span></a></li>
                     <li><a href="../index.html#awards" class="nav-link scrollto"><i class="bx bx-award"></i>
                             <span>Awards</span></a></li>
+                    <li><a href="#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo
+                                Gallery</span></a>
+                    </li>
                     <li><a href="../index.html#interests" class="nav-link scrollto"><i class="bx bx-heart"></i>
                             <span>Interests</span></a></li>
                     <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
@@ -249,8 +252,10 @@
                         </div>
                         <div class="portfolio-description neumorphic">
                             <h2>Certificate with topics</h2>
-                            <h5>1.Business Analytics with Excel <a href="https://simpli-web.app.link/e/E6DjIjR6KRb" target="_blank" rel="noopener noreferrer"> Click here </a></h5>
-                            <h5>2. ChatGPT for Cybersecurity</h5> <a href="https://simpli-web.app.link/e/zPfDovm42Rb" target="_blank" rel="noopener noreferrer"> Click here</a>
+                            <h5>1.Business Analytics with Excel <a href="https://simpli-web.app.link/e/E6DjIjR6KRb"
+                                    target="_blank" rel="noopener noreferrer"> Click here </a></h5>
+                            <h5>2. ChatGPT for Cybersecurity</h5> <a href="https://simpli-web.app.link/e/zPfDovm42Rb"
+                                target="_blank" rel="noopener noreferrer"> Click here</a>
                         </div>
                     </div>
 
