--- a/awards/forage.html
+++ b/awards/forage.html
@@ -188,6 +188,8 @@
               <span>Education</span></a></li>
           <li><a href="../../index.html#awards" class="nav-link scrollto"><i class="bx bx-award"></i> <span>Awards</span></a>
           </li>
+          <li><a href="#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo Gallery</span></a>
+          </li>
           <li><a href="../../index.html#interests" class="nav-link scrollto"><i class="bx bx-heart"></i>
               <span>Interests</span></a></li>
           <li><a href="../../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
