--- a/awards/mindluster.html
+++ b/awards/mindluster.html
@@ -189,6 +189,9 @@
                             <span>Education</span></a></li>
                     <li><a href="../index.html#awards" class="nav-link scrollto"><i class="bx bx-award"></i>
                             <span>Awards</span></a></li>
+                    <li><a href="#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo
+                                Gallery</span></a>
+                    </li>
                     <li><a href="../index.html#interests" class="nav-link scrollto"><i class="bx bx-heart"></i>
                             <span>Interests</span></a></li>
                     <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
@@ -234,7 +237,7 @@
                                     <img src="assets/img/portfolio/m2.jpg" alt="">
                                 </div>
 
-                                
+
 
                             </div>
                             <div class="swiper-pagination"></div>
@@ -247,15 +250,19 @@
                             <ul>
                                 <li><strong>Category</strong>: Certificate</li>
                                 <li><strong>Source</strong>: Mind Luster</li>
-                                <li><strong>Company Website</strong>: <a href="https://www.mindluster.com/">Mind Luster</a>
+                                <li><strong>Company Website</strong>: <a href="https://www.mindluster.com/">Mind
+                                        Luster</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="portfolio-description neumorphic">
                             <h2>Certificate with topics</h2>
-                            <h5>1. Google Cyber Security Professional <a href="https://www.mindluster.com/student/certificate/a11980f7" target="_blank" rel="noopener noreferrer"> Click here 👈 </a> </h5>
-                            <h5>2. AWS and Python <a href="https://www.mindluster.com/student/certificate/dc2df532" target="_blank" rel="noopener noreferrer"> Click here 👈 </a></h5>
-                            
+                            <h5>1. Google Cyber Security Professional <a
+                                    href="https://www.mindluster.com/student/certificate/a11980f7" target="_blank"
+                                    rel="noopener noreferrer"> Click here 👈 </a> </h5>
+                            <h5>2. AWS and Python <a href="https://www.mindluster.com/student/certificate/dc2df532"
+                                    target="_blank" rel="noopener noreferrer"> Click here 👈 </a></h5>
+
 
                         </div>
                     </div>
