--- a/awards/mindluster.html
+++ b/awards/mindluster.html
@@ -189,7 +189,7 @@
                             <span>Education</span></a></li>
                     <li><a href="../index.html#awards" class="nav-link scrollto"><i class="bx bx-award"></i>
                             <span>Awards</span></a></li>
-                    <li><a href="#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo
+                    <li><a href="../index.html#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo
                                 Gallery</span></a>
                     </li>
                     <li><a href="../index.html#interests" class="nav-link scrollto"><i class="bx bx-heart"></i>
