--- a/awards/mindluster.html
+++ b/awards/mindluster.html
@@ -28,7 +28,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
 
     <!-- Custom Neumorphic and Glassmorphism CSS -->
     <style>
