Add preload and preconnect links for performance optimization; enable lazy loading for project images

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     content="Jayanth Portfolio, web developer, software engineer, JavaScript developer, Python developer, digital portfolio, responsive web design, developer showcase, personal website">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#000000">
+  <link rel="alternate" href="https://jayanth.site/" hreflang="en-in">
+  <link rel="alternate" href="https://jayanth.site/" hreflang="x-default">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -49,6 +51,9 @@
   <link rel="canonical" href="https://jayanth.site/" />
 
 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="assets/img/bg1.jpg" as="image">
+  <link rel="preload" href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style">
 
   <!-- Favicons -->
   <link href="assets/img/jayanth.png" rel="icon">
@@ -577,7 +582,7 @@
         <!-- Project 1 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/wa.png" alt="Project 8" class="project-card-image">
+            <img src="assets/img/portfolio/wa.png" alt="Project 8" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>WhatsApp Chat Parser</span>
@@ -597,7 +602,7 @@
         <!-- Project 2 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image">
+            <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>🧠 MindoraGPT | Chatbot</span>
@@ -617,7 +622,7 @@
         <!-- Project 3 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/dna.png" alt="Project 3" class="project-card-image">
+            <img src="assets/img/portfolio/dna.png" alt="Project 3" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>BioPulse | DNA to Music</span>
@@ -638,7 +643,7 @@
         <!-- Project 4 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectC.webp" alt="Project 4" class="project-card-image">
+            <img src="assets/img/portfolio/projectC.webp" alt="Project 4" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>VerinoxGPT | Chatbot</span>
@@ -656,7 +661,7 @@
         <!-- Project 9 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/finger.png" alt="Project 9" class="project-card-image">
+            <img src="assets/img/portfolio/finger.png" alt="Project 9" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>Finger Tracking Gesture Control</span>
@@ -694,7 +699,7 @@
         <!-- Project 6 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project6.png" alt="Project 6" class="project-card-image">
+            <img src="assets/img/portfolio/project6.png" alt="Project 6" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>Gallery Nexus | Image Gallery</span>
@@ -713,7 +718,7 @@
         <!-- Project 7 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/IG.png" alt="Project 7" class="project-card-image">
+            <img src="assets/img/portfolio/IG.png" alt="Project 7" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>AI Powered Image Generator</span>
@@ -732,7 +737,7 @@
         <!-- Project 8 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image">
+            <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>🎮 Guess to Freedom Game</span>
@@ -755,7 +760,7 @@
         <!-- Project 10 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image">
+            <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image" loading="lazy">
           </div>
           <div class="project-card-title">
             <span>📖 Premium Dictionary App 🌍</span>
