Add structured data for SEO enhancement; include WebSite and BreadcrumbList schemas

--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
       ]
     }
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://jayanth.site/",
+        "name": "Jayanth Portfolio",
+        "publisher": {
+          "@type": "Person",
+          "name": "Donavalli Jayanth"
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://jayanth.site/?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+      </script>
+      
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://jayanth.site/"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Projects",
+          "item": "https://jayanth.site/#projects"
+        }]
+      }
+      </script>
+      
 </head>
 
 <body>
