Add structured data for 404 page; include WebPage schema for better SEO

--- a/404.html
+++ b/404.html
@@ -10,6 +10,21 @@
     <meta name="keywords" content="Jayanth, 404, page not found, portfolio">
     <meta name="author" content="Donavalli Jayanth">
     <link rel="canonical" href="https://www.jayanth.site/404.html" />
+    <meta name="robots" content="noindex, follow">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebPage",
+          "name": "404 Page Not Found",
+          "description": "The requested page on Jayanth's Portfolio was not found.",
+          "isPartOf": {
+            "@type": "WebSite",
+            "url": "https://www.jayanth.site/"
+          }
+        }
+        </script>
+        
+
 
     <style>
         body {
