--- a/awards/garuda.html
+++ b/awards/garuda.html
@@ -163,7 +163,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/dp.jpg" alt="" class="img-fluid square">
+        <img src="assets/img/dp1.jpg" alt="" class="img-fluid square">
         <h1 class="text-light"><a href="index.html">Jayanth</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/jayanth0124?t=_89WgzqbBLLQTeqbkVQtwg&s=09" class="twitter"><i
